Solve merge conflicts